# Proyecto-1942

./: .gitignore  Avion.h  Bullet.cpp  Bullet.h  CMakeLists.txt  Collisionable.cpp  Collisionable.h  CompatibilidadMacos.cpp  Creditos.cpp  Creditos.h  Enemy.cpp  Enemy.h  EnemyB.cpp  EnemyB.h  EnemyBullet.cpp  EnemyBullet.h  Explosion.cpp  Explosion.h  Fecha.cpp  Fecha.h  Game.h  GamePlayOld.cpp  GamePlayOld.h  Gameplay.cpp  Gameplay.h  Juego-1942.cbp  Level1Scene.cpp  Level1Scene.h  Level2Scene.cpp  Level2Scene.h  Level3Scene.cpp  Level3Scene.h  Menu.cpp  Menu.h  Personaje.cpp  Personaje.h  Player.h  PowerUp.cpp  PowerUp.h  Ranking.cpp  (+11 more)
assets/sprites/: 1942-sprites-enemy.bak  1942-sprites-player.bak  Capcom.jfif
